# storage-service

./: .env  .gitignore  Cargo.toml  README.md
ddl/: ddl_tables.sql
migration/src/: lib.rs  m20241214_154546_first_migration.rs  main.rs
src/: main.rs  middleware.rs
src/model/: files.rs  folders.rs  mod.rs  users.rs
src/routes/: auth.rs  mod.rs  storage.rs  user.rs
src/services/: errors.rs  file_service.rs  mod.rs  user_service.rs
