[package]
name = "storage-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = { version = "0.7.*", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["trace"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
bcrypt = "0.16.0"
chrono = "0.4.38"
sea-orm = { version = "1.1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
dotenvy = "0.15.7"
[dependencies.uuid]
version = "1.11.0"
headers="0.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
